src/test/deca/context/invalid/personalTests/TypeIncompatible2.deca
// Erreur de typage


{
    int x = "Hello"; // Erreur : x n'est pas un int
}